refactor: Arrays.asList -> List.of 수정