@@ -5,7 +5,7 @@ import static lotto.constant.ExceptionMessage.BONUS_NUMBER_DUPLICATED;
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Arrays;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -15,7 +15,7 @@ public class WinningNumbersTest {
 
     @BeforeEach
     void initialize() {
-        winningLotteryNumberCombination = new LotteryNumberCombination(Arrays.asList(1, 2, 3, 4, 5, 6));
+        winningLotteryNumberCombination = new LotteryNumberCombination(List.of(1, 2, 3, 4, 5, 6));
     }
 
     @DisplayName("범위에 벗어난 Bonus Number를 전달하는 경우 예외가 발생한다.")
